Prepare ImpSvNumberformatScan with KeywordLocalization context, tdf#114185

Change-Id: I3942a7de52bcedf491da83407791fcd0080aaf4d